

Enemies and Bosses:

-Buffed rot gourd max hp from 2200 to 2700
-Changed daffodils "hide under the platform" telegraphs to green instead of yellow to prevent confusion between her 2 different telegraphs
-All of orro-boro's non head segments are immune to all debuffs (Excluding special debuffs such as whip tag damage debuffs)
-Observing orchids will now only chase you if they have light of sight to you
-Ear worms movement and behavior is now more natural looking, they now recoil when shooting their sound blast, and they no longer draw behind tiles for better visibility


Miscellaneous:

-Bloom buffs UI now displays that you can remove buffs with right click when hovering over any icon
-Made the spider grotto biome size a tiny bit smaller
-Spider grotto caves are now a bit longer horizontally and a bit shorter vertically
-Swampy cemetery terrain now generates a bit flatter so structures dont generate weirdly and to make it feel like an actual cemetery a bit more
-Carved gourd-o-lanterns now count as light source blocks for npc housing
-Added tile wind swaying for many spooky mod tiles such as hanging ambient tiles, vines, ect, since tmodloader has finally added support for that
-Spooky mod grasses now immediately turn into their corresponding dirt block when broken like terraria grasses do
-New resprites for all spooky mod grasses and most spooky mod dirt blocks to make them look more fitting with terraria's grass blocks
-Catacombs curse debuff no longer prevents you from placing blocks
-Catacomb bricks and walls can now be broken with pickaxes/hammers once the respective boss at the bottom of that layer has been defeated (daffodil for layer 1 bricks, big bone for layer 2 bricks) (HOWEVER, the actual boss arenas and pandora's box arena are still completely indestructable. The indestructable arenas also only applies to new worlds, in old worlds the arenas are not made out of the new unbreakable block)