@@ -640,6 +640,8 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
 
                             if (NPC.localAI[0] % 20 == frequency)
                             {
+                                SoundEngine.PlaySound(SpitSound, NPC.Center);
+
                                 Vector2 ShootSpeed = player.Center - NPC.Center;
                                 ShootSpeed.Normalize();
                                 ShootSpeed.X *= Enraged ? 3f : 4f;
