@@ -509,3 +509,4 @@ Cauliflower.DisplayName: Cauliflower
 WormyHead.DisplayName: Wormy Charles
 WormySegment.DisplayName: Wormy Charles
 WormyTail.DisplayName: Wormy Charles
+SeaSpongeProj.DisplayName: Super-Absorbent Sponge
